--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@ Thumbs.db
 *.log
 error_log.txt
 build_log.txt
+
+# Python
+__pycache__/
+*.py[cod]
+*.class
+.venv/
+venv/
+Python Version/APIKEY.txt
